--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </div>
 
                     <div class="card-footer">
-                        <p class="card-footer-text">This card is property of the company. If found, please return.</p>
+                        <p class="card-footer-text">This card is property of <span id="previewFooterCompany">Company Name</span>. If found, please return.</p>
                     </div>
                 </div>
             </div>
