--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
 
                     <div class="card-body">
                         <div class="photo-container">
-                            <div id="previewPhoto" class="employee-photo">👤</div>
+                            <div id="previewPhoto" class="employee-photo">
+                                <span class="photo-placeholder">👤</span>
+                                <img id="employeePhotoImg" class="employee-photo-img" src="" alt="" style="display: none;">
+                            </div>
                         </div>
 
                         <div class="details">
@@ -101,7 +104,6 @@
                     </div>
 
                     <div class="card-footer">
-                        <p class="card-footer-text">This card is property of <span id="previewFooterCompany">Company Name</span>. If found, please return.</p>
                     </div>
                 </div>
             </div>
